# TLFEA

./: .format_all  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.md  test_namespace.cc
cmake/: TLFEAConfig.cmake.in
data/meshes/T10/: beam.vtu  beam_highres.vtu
data/meshes/T4/: beam.vtu  beam_highres.vtu  flow_past_cylinder.vtu
docs/: ARCHITECTURE.md  BUILDING.md  GETTING_STARTED.md  TROUBLESHOOTING.md
examples/: CMakeLists.txt  README_BEAM.md  README_BEAM_VTU.md  README_CANTILEVER.md  README_NEWTON.md  README_VTU_BEAM.md  beam_linear_static.cc  beam_linear_static_t4.cc  beam_newton_demo.cc  beam_simulation.cc  beam_simulation_newton.cc  beam_vtu_demo.cc  cantilever_beam_simulation.cc  flow_past_cylinder.cc  test_feat10_adamw.cc  test_feat10_nesterov.cc  test_feat10_newton.cc  vtu_beam_simulation.cc
src/: FEASolver.h  types.h
src/elements/: ANCF3243Data.cu  ANCF3243Data.cuh  ANCF3243DataFunc.cuh  ANCF3443Data.cu  ANCF3443Data.cuh  ANCF3443DataFunc.cuh  ElementBase.h  FEAT10Data.cu  FEAT10Data.cuh  FEAT10DataFunc.cuh  FEAT4Data.cu  FEAT4Data.cuh  FEAT4DataFunc.cuh
src/materials/: MaterialModel.cuh  MooneyRivlin.cuh  SVK.cuh
src/solvers/: LinearStaticSolver.cu  LinearStaticSolver.cuh  NavierStokesSUPGPSPGSolver.cu  NavierStokesSUPGPSPGSolver.cuh  NewtonSolver.cu  NewtonSolver.cuh  SolverBase.h  SyncedAdamW.cu  SyncedAdamW.cuh  SyncedAdamWNocoop.cu  SyncedAdamWNocoop.cuh  SyncedNesterov.cu  SyncedNesterov.cuh  SyncedNewton.cu  SyncedNewton.cuh
src/utils/: cpu_utils.cc  cpu_utils.h  cuda_utils.h  mesh_utils.cc  mesh_utils.h  quadrature_utils.h
